[gd_scene load_steps=14 format=3 uid="uid://b2s042yus43w8"]

[ext_resource type="Script" uid="uid://dlxx38avqh2lr" path="res://Scenes/Enemies/melee_rat.gd" id="1_op3ri"]
[ext_resource type="Texture2D" uid="uid://byai41516macb" path="res://Assets/Enemies/melee-rat-sprites.png" id="2_p52ei"]
[ext_resource type="PackedScene" uid="uid://hpt6vaypagal" path="res://Scripts/Components/hitbox_component.tscn" id="5_7x3ry"]
[ext_resource type="PackedScene" uid="uid://bux2ao34wjhu3" path="res://Scripts/Components/attack_component.tscn" id="6_7x3ry"]
[ext_resource type="PackedScene" uid="uid://du3qd1ihh51o8" path="res://Scripts/Components/health_component.tscn" id="8_kjiap"]
[ext_resource type="PackedScene" uid="uid://bauly11ivc0e3" path="res://Scripts/Components/hurtbox_component.tscn" id="9_6ooun"]
[ext_resource type="Script" uid="uid://dfncltihfaxrq" path="res://Scripts/Components/Projectiles/StatusEffectComponent.gd" id="10_07num"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jm04c"]
radius = 12.0
height = 48.0

[sub_resource type="Animation" id="Animation_k4v85"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tt7e2"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7bn3"]
_data = {
&"idle": SubResource("Animation_k4v85"),
&"run": SubResource("Animation_tt7e2")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7x3ry"]
radius = 22.0
height = 78.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aeqx5"]
radius = 14.0
height = 54.0

[node name="MeleeRat" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 28
script = ExtResource("1_op3ri")
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jm04c")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_p52ei")
centered = false
offset = Vector2(-32, -49)
hframes = 4
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s7bn3")
}

[node name="attack_component" parent="." instance=ExtResource("6_7x3ry")]
base_damage = 5.0

[node name="health_component" parent="." instance=ExtResource("8_kjiap")]
max_health = 5

[node name="hitbox_component" parent="." instance=ExtResource("5_7x3ry")]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_component"]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7x3ry")

[node name="hurtbox_component" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_6ooun")]
collision_layer = 8
collision_mask = 32
health_component = NodePath("../health_component")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox_component"]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_aeqx5")

[node name="StatusEffectComponent" type="Node" parent="."]
script = ExtResource("10_07num")
metadata/_custom_type_script = "uid://dfncltihfaxrq"

[connection signal="health_change" from="health_component" to="." method="_on_health_component_health_change"]
[connection signal="health_depleted" from="health_component" to="." method="_on_health_component_health_depleted"]
